Fix tests for JDK 16